cloudformation.yaml
AWSTemplateFormatVersion: "2010-09-09"
Parameters:
  SSHLocation:
    Description: The IP address range that can be used to SSH to the EC2 instances
    Type: String
    MinLength: "9"
    MaxLength: "18"
    AllowedPattern: '(\d{1,3})\.(\d{1,3})\.(\d{1,3})\.(\d{1,3})/(\d{1,2})'
    ConstraintDescription: must be a valid IP CIDR range of the form x.x.x.x/x.
  EC2InstanceType: 
    Description: Instance type for iperf server and client
    Type: String
    Default: m5.xlarge  
  AWSAccountIdForMainVPC: 
    Description: The AWS Account Id for the 
    Type: String
  PeerVpcId: 
    Description: Only needed for sub CloudFormation stacks. The VPC Id of the main stack. The main CloudFormation stack can leave this empty
    Type: String
    Default: "" # The main CloudFormation stack can leave this empty
  PeerRoleArn:
    Description: Only needed for sub CloudFormation stacks. The ARN of VPC Peering role. The main CloudFormation stack can leave this empty
    Type: String
    Default: "" # The main CloudFormation stack can leave this empty
  PeerRegion:
    Description: Only needed for sub CloudFormation stacks. The region of the main stack. The main CloudFormation stack can leave this empty
    Type: String 
    Default: "" # The main CloudFormation stack can leave this empty
  MainRegion:
    Description: Your default region
    Type: String 
    Default: "ap-northeast-1"
  
Mappings:
  RegionMap:
    eu-north-1:
      NumberOfAvailabilityZones: 3
      RegionSubnet: 10.101
      AmazonLinux2AMI: ami-d16fe6af
    ap-south-1:
      NumberOfAvailabilityZones: 3
      RegionSubnet: 10.102
      AmazonLinux2AMI: ami-0889b8a448de4fc44
    eu-west-3:
      NumberOfAvailabilityZones: 3
      RegionSubnet: 10.103
      AmazonLinux2AMI: ami-0451ae4fd8dd178f7
    eu-west-2:
      NumberOfAvailabilityZones: 3
      RegionSubnet: 10.104
      AmazonLinux2AMI: ami-09ead922c1dad67e4
    eu-west-1:
      NumberOfAvailabilityZones: 3
      RegionSubnet: 10.105
      AmazonLinux2AMI: ami-07683a44e80cd32c5
    ap-northeast-2:
      NumberOfAvailabilityZones: 3
      RegionSubnet: 10.106
      AmazonLinux2AMI: ami-047f7b46bd6dd5d84
    ap-northeast-1:
      NumberOfAvailabilityZones: 3
      RegionSubnet: 10.107
      AmazonLinux2AMI: ami-0f9ae750e8274075b
    sa-east-1:
      NumberOfAvailabilityZones: 3
      RegionSubnet: 10.108
      AmazonLinux2AMI: ami-0669a96e355eac82f
    ca-central-1:
      NumberOfAvailabilityZones: 3
      RegionSubnet: 10.109
      AmazonLinux2AMI: ami-03338e1f67dae0168
    ap-southeast-1:
      NumberOfAvailabilityZones: 3
      RegionSubnet: 10.110
      AmazonLinux2AMI: ami-0b419c3a4b01d1859
    ap-southeast-2:
      NumberOfAvailabilityZones: 3
      RegionSubnet: 10.111
      AmazonLinux2AMI: ami-04481c741a0311bbb
    eu-central-1:
      NumberOfAvailabilityZones: 3
      RegionSubnet: 10.112
      AmazonLinux2AMI: ami-09def150731bdbcc2
    us-east-1:
      NumberOfAvailabilityZones: 3
      RegionSubnet: 10.113
      AmazonLinux2AMI: ami-0de53d8956e8dcf80
    us-east-2:
      NumberOfAvailabilityZones: 3
      RegionSubnet: 10.114
      AmazonLinux2AMI: ami-02bcbb802e03574ba
    us-west-1:
      NumberOfAvailabilityZones: 3
      RegionSubnet: 10.115
      AmazonLinux2AMI: ami-0019ef04ac50be30f
    us-west-2:
      NumberOfAvailabilityZones: 3
      RegionSubnet: 10.116
      AmazonLinux2AMI: ami-061392db613a6357b

Conditions:
  Has2AvailabilityZones:
    !Or
      - !Equals [ 2, !FindInMap [RegionMap, Ref: "AWS::Region", NumberOfAvailabilityZones] ]
      - !Equals [ 3, !FindInMap [RegionMap, Ref: "AWS::Region", NumberOfAvailabilityZones] ]
      - !Equals [ 4, !FindInMap [RegionMap, Ref: "AWS::Region", NumberOfAvailabilityZones] ]
      - !Equals [ 5, !FindInMap [RegionMap, Ref: "AWS::Region", NumberOfAvailabilityZones] ]
  Has3AvailabilityZones:
    !Or
      - !Equals [ 3, !FindInMap [RegionMap, Ref: "AWS::Region", NumberOfAvailabilityZones] ]
      - !Equals [ 4, !FindInMap [RegionMap, Ref: "AWS::Region", NumberOfAvailabilityZones] ]
      - !Equals [ 5, !FindInMap [RegionMap, Ref: "AWS::Region", NumberOfAvailabilityZones] ]
  Has4AvailabilityZones:
    !Or
      - !Equals [ 4, !FindInMap [RegionMap, Ref: "AWS::Region", NumberOfAvailabilityZones] ]
      - !Equals [ 5, !FindInMap [RegionMap, Ref: "AWS::Region", NumberOfAvailabilityZones] ]
  IsMainVPC:
    !Equals [ !Ref "AWS::Region", !Ref MainRegion ]
  IsSubVPC:
    !Not [ !Equals [ !Ref "AWS::Region", !Ref MainRegion ] ] 

Resources:
  # Define VPC
  VPC:
    Type: AWS::EC2::VPC
    Properties:
      # e.g. 10.101.0.0/16, where the second octet is replaced by mapping
      CidrBlock: 
        !Sub
          - "${RegionSubnet}.0.0/16"
          - { RegionSubnet: !FindInMap [RegionMap, Ref: "AWS::Region", RegionSubnet] }            
      Tags:
        - Key: Name
          Value: aws-ping-vpc-main

  # Needed for VPC peering
  PeerRole:
    Type: 'AWS::IAM::Role'
    Condition: IsMainVPC
    Properties:
      AssumeRolePolicyDocument:
        Statement:
          - Principal:
              AWS: !Ref AWSAccountIdForMainVPC
            Action:
              - 'sts:AssumeRole'
            Effect: Allow
      Path: /
      Policies:
        - PolicyName: root
          PolicyDocument:
            Version: 2012-10-17
            Statement:
              - Effect: Allow
                Action: 'ec2:AcceptVpcPeeringConnection'
                Resource: '*'
  VPCPeeringConnection:
    Type: 'AWS::EC2::VPCPeeringConnection'
    Condition: IsSubVPC
    Properties:
      VpcId: !Ref VPC
      PeerRegion: !Ref PeerRegion
      PeerVpcId: !Ref PeerVpcId
      PeerOwnerId: !Ref AWSAccountIdForMainVPC
      PeerRoleArn: !Ref PeerRoleArn

  # Define Subnet
  SubnetFirst:
    Type: AWS::EC2::Subnet
    Properties:
      # e.g. 10.101.0.0/24, where the second octet is replaced by mapping
      CidrBlock: 
        !Sub
          - "${RegionSubnet}.0.0/24"
          - { RegionSubnet: !FindInMap [RegionMap, Ref: "AWS::Region", RegionSubnet] }            
      AvailabilityZone: 
        Fn::Select:
          - 0
          - !GetAZs {Ref: "AWS::Region"}
      VpcId: !Ref VPC
      Tags:
        - Key: Name
          Value: aws-ping-subnet-1
  SubnetFirstExtra:
    Type: AWS::EC2::Subnet
    Properties:
      # e.g. 10.101.1.0/24, where the second octet is replaced by mapping
      CidrBlock: 
        !Sub
          - "${RegionSubnet}.1.0/24"
          - { RegionSubnet: !FindInMap [RegionMap, Ref: "AWS::Region", RegionSubnet] }            
      AvailabilityZone: 
        Fn::Select: 
          - 0
          - !GetAZs {Ref: "AWS::Region"}
      VpcId: !Ref VPC
      Tags:
        - Key: Name
          Value: aws-ping-subnet-1-extra
  SubnetSecond:
    Type: AWS::EC2::Subnet
    Condition: Has2AvailabilityZones
    Properties:
      # e.g. 10.101.2.0/24, where the second octet is replaced by mapping
      CidrBlock: 
        !Sub
          - "${RegionSubnet}.2.0/24"
          - { RegionSubnet: !FindInMap [RegionMap, Ref: "AWS::Region", RegionSubnet] }            
      AvailabilityZone: 
        Fn::Select: 
          - 1
          - !GetAZs {Ref: "AWS::Region"}
      VpcId: !Ref VPC
      Tags:
        - Key: Name
          Value: aws-ping-subnet-2
  SubnetThird:
    Type: AWS::EC2::Subnet
    Condition: Has3AvailabilityZones
    Properties:
      # e.g. 10.101.3.0/24, where the second octet is replaced by mapping
      CidrBlock: 
        !Sub
          - "${RegionSubnet}.3.0/24"
          - { RegionSubnet: !FindInMap [RegionMap, Ref: "AWS::Region", RegionSubnet] }            
      AvailabilityZone: 
        Fn::Select: 
          - 2
          - !GetAZs {Ref: "AWS::Region"}
      VpcId: !Ref VPC
      Tags:
        - Key: Name
          Value: aws-ping-subnet-3
  SubnetFourth:
    Type: AWS::EC2::Subnet
    Condition: Has4AvailabilityZones
    Properties:
      # e.g. 10.101.4.0/24, where the second octet is replaced by mapping
      CidrBlock: 
        !Sub
          - "${RegionSubnet}.4.0/24"
          - { RegionSubnet: !FindInMap [RegionMap, Ref: "AWS::Region", RegionSubnet] }            
      AvailabilityZone: 
        Fn::Select: 
          - 3
          - !GetAZs {Ref: "AWS::Region"}
      VpcId: !Ref VPC
      Tags:
        - Key: Name
          Value: aws-ping-subnet-4

  # Define Internet Gateway and the attachment to VPC          
  InternetGateway:
    Type: AWS::EC2::InternetGateway
    Properties:
      Tags:
      - Key: Name
        Value: aws-ping-igateway
  VPCGatewayAttachment:
    Type: AWS::EC2::VPCGatewayAttachment
    Properties: 
      InternetGatewayId: !Ref InternetGateway
      VpcId: !Ref VPC


  # Define Route Table, its Route, and associate the Route Table with the Subnet
  RouteTable:
    Type: AWS::EC2::RouteTable
    Properties:
      VpcId: !Ref VPC
      Tags:
      - Key: Name
        Value: aws-ping-route-table
  RouteInternetGateway:
    Type: AWS::EC2::Route
    Properties: 
      DestinationCidrBlock: 0.0.0.0/0
      GatewayId: !Ref InternetGateway
      RouteTableId: !Ref RouteTable      
  RouteVPCPeering:
    Type: AWS::EC2::Route
    Condition: IsSubVPC
    Properties: 
      DestinationCidrBlock:
        !Sub
          - "${RegionSubnet}.0.0/16"
          - { RegionSubnet: !FindInMap [RegionMap, Ref: "MainRegion", RegionSubnet] }            
      GatewayId: !Ref VPCPeeringConnection
      RouteTableId: !Ref RouteTable      
  SubnetFirstRouteTableAssociation:
    Type: AWS::EC2::SubnetRouteTableAssociation
    Properties:
      RouteTableId: !Ref RouteTable
      SubnetId: !Ref SubnetFirst
  SubnetFirstExtraRouteTableAssociation:
    Type: AWS::EC2::SubnetRouteTableAssociation
    Properties:
      RouteTableId: !Ref RouteTable
      SubnetId: !Ref SubnetFirstExtra
  SubnetSecondRouteTableAssociation:
    Type: AWS::EC2::SubnetRouteTableAssociation
    Condition: Has2AvailabilityZones
    Properties:
      RouteTableId: !Ref RouteTable
      SubnetId: !Ref SubnetSecond
  SubnetThirdRouteTableAssociation:
    Type: AWS::EC2::SubnetRouteTableAssociation
    Condition: Has3AvailabilityZones
    Properties:
      RouteTableId: !Ref RouteTable
      SubnetId: !Ref SubnetThird
  SubnetFourthRouteTableAssociation:
    Type: AWS::EC2::SubnetRouteTableAssociation
    Condition: Has4AvailabilityZones
    Properties:
      RouteTableId: !Ref RouteTable
      SubnetId: !Ref SubnetFourth

  # Define Security Group and its inbound rules (= ingress).
  # The outbound (egress) rules are automatically set as "Allow All".
  SecurityGroup:
    Type: AWS::EC2::SecurityGroup
    Properties: 
      GroupName: aws-ping-security-group
      GroupDescription: security group allowing SSH and ICMP
      VpcId: !Ref VPC
      Tags:
        - Key: Name
          Value: aws-ping-security-group
  SecurityGropuIngressInternal:
    Type: AWS::EC2::SecurityGroupIngress
    Properties:
      GroupId: !Ref SecurityGroup
      IpProtocol: -1
      SourceSecurityGroupId: !Ref SecurityGroup
  SecurityGropuIngressSSH:
    Type: AWS::EC2::SecurityGroupIngress
    Properties:
      GroupId: !Ref SecurityGroup
      IpProtocol: tcp
      FromPort: 22
      ToPort: 22
      CidrIp: !Ref SSHLocation
  SecurityGropuIngressICMP:
    Type: AWS::EC2::SecurityGroupIngress
    Properties:
      GroupId: !Ref SecurityGroup
      IpProtocol: icmp
      FromPort: 8
      ToPort: 8
      CidrIp: !Ref SSHLocation
  # Accept ICMP requests from ALL regions' VPC Peering - this is too wide open, but for experimental purpose, that's probably OK.
  # Do this at your own risk!!
  SecurityGropuIngressVPCPeeringICMP:
    Type: AWS::EC2::SecurityGroupIngress
    Properties:
      GroupId: !Ref SecurityGroup
      IpProtocol: icmp
      FromPort: 8
      ToPort: 8
      CidrIp: 10.0.0.0/8

  # EC2 instances
  EC2InstanceSubnetFirst:
    Type: AWS::EC2::Instance
    Properties: 
      ImageId: !FindInMap [RegionMap, Ref: "AWS::Region", AmazonLinux2AMI]
      InstanceType: !Ref EC2InstanceType
      # You should create an EC2 key pair in advance, as there is no key-pair resource in CloudFormation
      # https://docs.aws.amazon.com/AWSCloudFormation/latest/UserGuide/cfn-console-create-keypair.html
      KeyName: "demo-key-pair"
      # https://aws.amazon.com/premiumsupport/knowledge-center/network-throughput-benchmark-linux-ec2/
      UserData:
        Fn::Base64: |
            #!/bin/bash
            yum -y install git
            cd /home/ec2-user
            git clone https://github.com/richardimaoka/aws-ping
      NetworkInterfaces: 
        - AssociatePublicIpAddress: true
          DeviceIndex: "0"
          GroupSet:
            - !Ref SecurityGroup
          SubnetId: !Ref SubnetFirst
          PrivateIpAddresses:
            # e.g. 10.101.0.5, where the second octet is replaced by mapping
            - PrivateIpAddress: 
                !Sub
                  - "${RegionSubnet}.0.5"
                  - { RegionSubnet: !FindInMap [RegionMap, Ref: "AWS::Region", RegionSubnet] }            
              Primary: true
      Tags:
      - Key: Name
        Value: aws-ping-ec2-subnet-1
  EC2InstanceSubnetFirstExtra:
    Type: AWS::EC2::Instance
    Properties: 
      ImageId: !FindInMap [RegionMap, Ref: "AWS::Region", AmazonLinux2AMI]
      InstanceType: !Ref EC2InstanceType
      # You should create an EC2 key pair in advance, as there is no key-pair resource in CloudFormation
      # https://docs.aws.amazon.com/AWSCloudFormation/latest/UserGuide/cfn-console-create-keypair.html
      KeyName: "demo-key-pair"
      # https://aws.amazon.com/premiumsupport/knowledge-center/network-throughput-benchmark-linux-ec2/
      UserData:
        Fn::Base64: |
            #!/bin/bash
            yum -y install git
            cd /home/ec2-user
            git clone https://github.com/richardimaoka/aws-ping
      NetworkInterfaces: 
        - AssociatePublicIpAddress: true
          DeviceIndex: "0"
          GroupSet:
            - !Ref SecurityGroup
          SubnetId: !Ref SubnetFirstExtra
          PrivateIpAddresses:
            # e.g. 10.101.0.5, where the second octet is replaced by mapping
            - PrivateIpAddress: 
                !Sub
                  - "${RegionSubnet}.1.5"
                  - { RegionSubnet: !FindInMap [RegionMap, Ref: "AWS::Region", RegionSubnet] }            
              Primary: true
      Tags:
      - Key: Name
        Value: aws-ping-ec2-subnet-1-extra
  EC2InstanceSubnetSecond:
    Type: AWS::EC2::Instance
    Condition: Has2AvailabilityZones
    Properties: 
      ImageId: !FindInMap [RegionMap, Ref: "AWS::Region", AmazonLinux2AMI]
      InstanceType: !Ref EC2InstanceType
      # You should create an EC2 key pair in advance, as there is no key-pair resource in CloudFormation
      # https://docs.aws.amazon.com/AWSCloudFormation/latest/UserGuide/cfn-console-create-keypair.html
      KeyName: "demo-key-pair"
      # https://aws.amazon.com/premiumsupport/knowledge-center/network-throughput-benchmark-linux-ec2/
      UserData:
        Fn::Base64: |
            #!/bin/bash
            yum -y install git
            cd /home/ec2-user
            git clone https://github.com/richardimaoka/aws-ping
      NetworkInterfaces: 
        - AssociatePublicIpAddress: true
          DeviceIndex: "0"
          GroupSet:
            - !Ref SecurityGroup
          SubnetId: !Ref SubnetSecond
          PrivateIpAddresses:
            # e.g. 10.101.0.5, where the second octet is replaced by mapping
            - PrivateIpAddress: 
                !Sub
                  - "${RegionSubnet}.2.5"
                  - { RegionSubnet: !FindInMap [RegionMap, Ref: "AWS::Region", RegionSubnet] }            
              Primary: true
      Tags:
      - Key: Name
        Value: aws-ping-ec2-subnet-2
  EC2InstanceSubnetThird:
    Type: AWS::EC2::Instance
    Condition: Has3AvailabilityZones
    Properties: 
      ImageId: !FindInMap [RegionMap, Ref: "AWS::Region", AmazonLinux2AMI]
      InstanceType: !Ref EC2InstanceType
      # You should create an EC2 key pair in advance, as there is no key-pair resource in CloudFormation
      # https://docs.aws.amazon.com/AWSCloudFormation/latest/UserGuide/cfn-console-create-keypair.html
      KeyName: "demo-key-pair"
      # https://aws.amazon.com/premiumsupport/knowledge-center/network-throughput-benchmark-linux-ec2/
      UserData:
        Fn::Base64: |
            #!/bin/bash
            yum -y install git
            cd /home/ec2-user
            git clone https://github.com/richardimaoka/aws-ping
      NetworkInterfaces: 
        - AssociatePublicIpAddress: true
          DeviceIndex: "0"
          GroupSet:
            - !Ref SecurityGroup
          SubnetId: !Ref SubnetThird
          PrivateIpAddresses:
          PrivateIpAddresses:
            # e.g. 10.101.0.5, where the second octet is replaced by mapping
            - PrivateIpAddress: 
                !Sub
                  - "${RegionSubnet}.3.5"
                  - { RegionSubnet: !FindInMap [RegionMap, Ref: "AWS::Region", RegionSubnet] }            
              Primary: true
      Tags:
      - Key: Name
        Value: aws-ping-ec2-subnet-3
  EC2InstanceSubnetFourth:
    Type: AWS::EC2::Instance
    Condition: Has4AvailabilityZones
    Properties: 
      ImageId: !FindInMap [RegionMap, Ref: "AWS::Region", AmazonLinux2AMI]
      InstanceType: !Ref EC2InstanceType
      # You should create an EC2 key pair in advance, as there is no key-pair resource in CloudFormation
      # https://docs.aws.amazon.com/AWSCloudFormation/latest/UserGuide/cfn-console-create-keypair.html
      KeyName: "demo-key-pair"
      # https://aws.amazon.com/premiumsupport/knowledge-center/network-throughput-benchmark-linux-ec2/
      UserData:
        Fn::Base64: |
            #!/bin/bash
            yum -y install git
            cd /home/ec2-user
            git clone https://github.com/richardimaoka/aws-ping
      NetworkInterfaces: 
        - AssociatePublicIpAddress: true
          DeviceIndex: "0"
          GroupSet:
            - !Ref SecurityGroup
          SubnetId: !Ref SubnetFourth
          PrivateIpAddresses:
            # e.g. 10.101.0.5, where the second octet is replaced by mapping
            - PrivateIpAddress: 
                !Sub
                  - "${RegionSubnet}.4.5"
                  - { RegionSubnet: !FindInMap [RegionMap, Ref: "AWS::Region", RegionSubnet] }            
              Primary: true
      Tags:
      - Key: Name
        Value: aws-ping-ec2-subnet-4

Outputs:
  VPCId:
    Description: VPC
    Value: !Ref VPC
    Export:
      Name: !Sub "${AWS::StackName}-VPCId"
  PeerRoleArn:
    Condition: IsMainVPC
    Export:
      Name: !Sub "${AWS::StackName}-PeerRoleArn"      
    Value: !GetAtt 
      - PeerRole
      - Arn
